# forge

./: .gitignore  BENCHMARK.md  BIG_DEMO.md  BUGS.md  CHANGELOG.md  CITATION.cff  DEBUG_DEMO.md  FIELD_TEST.md  README.md  forge.py  pyproject.toml
.github/workflows/: test.yml
bench/results/click/: forge-mutate-partial.json
bench/results/httpie/: forge-fast-deep.json  forge-modularity.json  forge-mutate.json  mutmut.json  pydeps.json  testmon.json
docs/: CYCLE2_SUMMARY.md  CYCLE3_BATTLE_PLAN.md  D3B_RUNTIME_VALIDATION.md  D3_LIBCST_PRESCAN.md  PYPI_UPLOAD_GUIDE.md
examples/calculator/: README.md  calculator.py
examples/calculator/tests/: test_calculator.py
scripts/: bench.sh  demo.sh
tests/: conftest.py  test_cli_entry_point.py  test_forge_destructive_skip.py  test_forge_real_algos.py  test_typing.py
tools/: d3_libcst_prescan.py
