[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forge-shield"
version = "0.1.0"
description = "Pytest regression shield with predictive analytics — Louvain communities, Kaplan-Meier survival, adaptive Kalman over git history"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "sky1241" }]
keywords = [
    "pytest",
    "regression",
    "testing",
    "louvain",
    "kaplan-meier",
    "kalman",
    "defect-prediction",
    "flaky-tests",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]

[project.optional-dependencies]
# `forge --mutate` requires libcst (AST-aware mutation backend, cycle 4 D-3b).
# All other forge subcommands work without it — keep the install footprint
# minimal for users who only need --baseline / --predict / --carmack / etc.
mutate = [
    "libcst>=1.0",
]
dev = [
    "pytest>=7.0",
    "pytest-timeout>=2.0",
    "pytest-cov>=4.0",
    "coverage>=7.0",
    "hypothesis>=6.0",
    "mutmut>=2.4",
    "mypy>=1.0",
    "libcst>=1.0",
]

[project.scripts]
forge = "forge:main"

[project.urls]
Homepage = "https://github.com/sky1241/forge"
Issues = "https://github.com/sky1241/forge/issues"
Repository = "https://github.com/sky1241/forge"
Changelog = "https://github.com/sky1241/forge/blob/main/CHANGELOG.md"

[tool.setuptools]
py-modules = ["forge"]

[tool.pytest.ini_options]
# Cycle 4 C-C: mark slow tests (e.g. mypy --strict subprocess) so they
# don't run by default. Use `pytest -m slow` to invoke them explicitly.
markers = [
    "slow: tests that take >5s — run with `pytest -m slow` (excluded from default suite)",
]
addopts = "-m 'not slow'"
