[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forge-shield"
version = "1.0.4"
description = "Pytest regression shield with predictive analytics — Louvain communities, Kaplan-Meier survival, adaptive Kalman over git history"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "sky1241" }]
keywords = [
    "pytest",
    "regression",
    "testing",
    "louvain",
    "kaplan-meier",
    "kalman",
    "defect-prediction",
    "flaky-tests",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]

[project.optional-dependencies]
# Granular install footprint (cycle 4 E-2). Default `pip install forge-shield`
# ships only stdlib + the user's own pytest. Each subcommand that needs a
# native lib lives behind its own extra; users opt in to what they actually
# run. The `all` meta-extra rolls them up.
#
#   forge --mutate           → forge-shield[mutate]    (libcst)
#   forge --locate           → forge-shield[locate]    (coverage + pytest-cov)
#   forge --gen-props        → forge-shield[fuzz]      (hypothesis; user runs
#                                                       the generated tests)
#   everything               → forge-shield[all]       (= mutate+locate+fuzz)
#   contributor / dev        → forge-shield[dev]
#
# `forge --mutate` and `forge --locate` fail-fast with a clean install message
# when their extra is absent (see _check_dep helper + cycle 4 D-3b removal).

mutate = [
    "libcst>=1.0",
]
locate = [
    "coverage>=7.0",
    "pytest-cov>=4.0",
]
fuzz = [
    "hypothesis>=6.0",
]
all = [
    "forge-shield[mutate,locate,fuzz]",
]
dev = [
    "pytest>=7.0",
    "pytest-timeout>=2.0",
    "mypy>=1.0",
    "mutmut>=2.4",
    "forge-shield[mutate,locate,fuzz]",
]

[project.scripts]
forge = "forge:main"

[project.urls]
Homepage = "https://github.com/sky1241/forge"
Issues = "https://github.com/sky1241/forge/issues"
Repository = "https://github.com/sky1241/forge"
Changelog = "https://github.com/sky1241/forge/blob/main/CHANGELOG.md"

[tool.setuptools]
py-modules = ["forge"]

[tool.pytest.ini_options]
# Cycle 4 C-C: mark slow tests (e.g. mypy --strict subprocess) so they
# don't run by default. Use `pytest -m slow` to invoke them explicitly.
markers = [
    "slow: tests that take >5s — run with `pytest -m slow` (excluded from default suite)",
]
addopts = "-m 'not slow'"
